log
Tue 07 May 2024 06:42:08 PM UTC: 
 tests:  1|8
total_score: 0/70
ed2ca26
Tue 07 May 2024 06:45:54 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
c911557
Tue 07 May 2024 07:03:37 PM UTC: 
 treemap.c | 49 +++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 43 insertions(+), 6 deletions(-)
 tests:  3|7
total_score: 5/70
b889ad4
Tue 07 May 2024 07:07:06 PM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:19: error: unused variable ‘parent’ [-Werror=unused-variable]
   59 |         TreeNode *parent = NULL;
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5ea8547
Tue 07 May 2024 07:10:33 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
d1696d0
Tue 07 May 2024 07:12:39 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
dc2c90f
Tue 07 May 2024 07:12:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8209371
Tue 07 May 2024 07:14:17 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/70
2499c51
Tue 07 May 2024 07:33:21 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
db660ae
Wed 08 May 2024 01:00:55 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
8aa587d
Wed 08 May 2024 02:00:29 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:108:5: error: expected expression before ‘}’ token
  108 |     }
      |     ^
Compilation failed
a9b0e5d
Wed 08 May 2024 02:00:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
ae939c0
Wed 08 May 2024 02:11:47 AM UTC: 
 treemap.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
983cc64
Wed 08 May 2024 02:35:51 AM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 36 insertions(+), 11 deletions(-)
 tests:  8|5
total_score: 15/70
8db052c
